src/test/data/tests/pragma/invalid/invalid_character.c
#pragma data 0x00 "π"

int main(void) {
    return 0;
}
